# securethecloud-operational-intelligence-fabric

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: lab-check.yml
ai-service/: pyproject.toml
ai-service/app/: main.py
ai-service/tests/: test_investigation.py
api/: go.mod
api/cmd/server/: main.go
api/migrations/: 001_init.sql
docs/: architecture.md  demo-script.md  doctrine-boundaries.md  github-issues.md  lab-walkthrough.md  resume-bullets.md  verified-output.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/incidents/[id]/: page.tsx
k8s/: kind-cluster.yaml
k8s/workloads/: payment-api.yaml
policy/opa/: approval_policy.rego  runtime_decision.rego  runtime_decision_test.rego
scripts/: approve_incident.sh  replay_evidence.sh  run_investigation.sh  simulate_runtime_event.sh
telemetry/sample-events/: suspicious_exec.json
