[project]
name = "securethecloud-oif-ai-service"
version = "0.1.0"
description = "AI investigation service for SecureTheCloud Operational Intelligence Fabric"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
